--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,3 +7,5 @@ sonar.sourceEncoding=UTF-8
 sonar.exclusions=.properties, Dockerfile, *.md, node_modules/**, __tests__/**, coverage/**,*.sh, app/models, configuration.js
 sonar.tests=./tests
 sonar.language=javascript
+sonar.dynamicAnalysis="reuseReports"
+sonar.javascript.lcov.reportPaths=./coverage/lcov.info
