--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,7 +5,7 @@ sonar.projectVersion=1.0
 sonar.sources=./api
 sonar.sourceEncoding=UTF-8
 sonar.exclusions=.properties, Dockerfile, *.md, node_modules/**, __tests__/**, coverage/**,*.sh, app/models, configuration.js
-sonar.tests=./tests
+sonar.tests=tests/
 sonar.language=javascript
 sonar.dynamicAnalysis="reuseReports"
 sonar.javascript.lcov.reportPaths=./coverage/lcov.info
