--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,20 +1,23 @@
-name: Build and Test
+name: Build
 on:
   push:
     branches:
-      - develop
       - master
-
+  pull_request:
+    types: [opened, synchronize, reopened]
 jobs:
   sonarcloud:
-    name: Build, Test and Analyze
+    name: SonarCloud
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
+      - name: Install dependencies
+        run: npm i
+      - name: Test and coverage
+        run: npm jest --coverage
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_TOKEN: ${{ secrets. SONARCLOUD_TOKEN }}
