--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "NODE_ENV=test jest --config ./jest.config.json --verbose --detectOpenHandles",
-    "coverage": "jest --config ./jest.config.json --verbose --detectOpenHandles --coverage",
+    "coverage": "NODE_ENV=test jest --config ./jest.config.json --verbose --detectOpenHandles --coverage",
     "prepare": "husky",
     "pre-commit": "eslint . && lint-staged",
     "lint": "eslint .",
