--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eslint-plugin-prettier": "^5.1.3",
     "husky": "^9.0.11",
     "jest": "^29.7.0",
+    "jest-mock-req-res": "^1.0.2",
     "prettier": "^3.2.5",
     "prisma": "^5.13.0",
     "supertest": "^6.3.4"
