refactor: move test timeout to config file

--- a/jest.config.json
+++ b/jest.config.json
@@ -3,5 +3,6 @@
   "rootDir": ".",
   "testEnvironment": "node",
   "testRegex": ".test.js$",
-  "setupFilesAfterEnv": ["./jest.setup.js"]
+  "setupFilesAfterEnv": ["./jest.setup.js"],
+  "testTimeout": 10000
 }
