--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "nodemon": "^3.1.0",
-    "redoc-express": "^2.1.0"
+    "redoc-express": "^2.1.0",
+    "uuid": "^9.0.1"
   }
 }
