--- a/api/openapi/api.yml
+++ b/api/openapi/api.yml
@@ -233,6 +233,7 @@ paths:
           required: false
           schema:
             type: string
+          allowReserved: true
         - name: orderBy
           in: query
           description: >
@@ -665,6 +666,7 @@ paths:
           required: false
           schema:
             type: string
+          allowReserved: true
         - name: orderBy
           in: query
           description: >
