fix: add nullable true to image and logo

--- a/api/openapi/api.yml
+++ b/api/openapi/api.yml
@@ -417,6 +417,7 @@ paths:
                 logo:
                   type: string
                   description: The user's logo URL.
+                  nullable: true
               additionalProperties: false
       responses:
         200:
@@ -845,6 +846,7 @@ paths:
                 image:
                   type: string
                   description: The article's image.
+                  nullable: true
                 title:
                   type: string
                   description: The article's title.
