--- a/api/openapi/api.yml
+++ b/api/openapi/api.yml
@@ -1068,6 +1068,11 @@ paths:
           required: true
           schema:
             type: integer
+        - name: userId
+          in: query
+          description: The user's id.
+          schema:
+            type: integer
       responses:
         200:
           description: OK
